overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,6 @@
 	height: 175px;
 	/*width: auto;*/
 }
-.loaded{
+body{
 	overflow: hidden;
 }
